--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
     <string name="today">Vandaag</string>
-    <string name="recent_marks">Laatste Cijfers</string>
+    <string name="recent_grades">Laatste Cijfers</string>
     <string name="login">Login</string>
     <string name="dashboard">Dashboard</string>
     <string name="grades">Cijfers</string>
@@ -18,7 +18,7 @@
     <string name="invalid_password">Fout wachtwoord</string>
     <string name="profile_picture">Profiel Foto</string>
     <string name="logout">Uitloggen</string>
-    <string name="no_intertnet">Geen internet</string>
+    <string name="no_internet">Geen internet</string>
     <string name="no_appointments">Helemaal niks!</string>
     <string name="color">Kleur</string>
     <string name="user_interface">Gebruikers Interface</string>
