--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="add_account">Voeg account toe</string>
     <string name="set_account">Verander account</string>
     <string name="unknown_error">Onbekende fout</string>
+    <string name="logged_off">Inloggen kan via 'Instellingen -> Voeg account toe'</string>
 
 </resources>
