--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
     <string name="today">Vandaag</string>
+    <string name="tomorrow">Morgen</string>
     <string name="recent_grades">Laatste Cijfers</string>
     <string name="login">Login</string>
     <string name="dashboard">Dashboard</string>
